--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ python:
 #  - "3.4"
   - "2.7"
 before_install: 
- sudo apt-get install -qq python-numpy python-scipy
+ sudo apt-get install -qq python-numpy python-scipy python3-numpy python3-scipy
 install: pip install  -q --allow-all-external  -r requirements.txt
 
 script:  python maxent.py
