--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
 language: python
 python:
-#  - "3.4"
+  - "3.4"
   - "2.7"
 before_install: 
  sudo apt-get install -qq python-numpy python-scipy python3-numpy python3-scipy
 install: pip install  -q --allow-all-external  -r requirements.txt
 
-script:  python maxent.py
+script:  
+ python maxent.py
+ python kaczmarz.py
