--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
   - "2.7"
 before_install: 
  sudo apt-get install -qq python-numpy python-scipy python3-numpy python3-scipy
-install: pip install  -q --allow-all-external  -r requirements.txt
+install: pip install -r requirements.txt
 
 script:  
  python maxent.py
