--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ python:
 #  - "3.4"
   - "2.7"
 before_install: 
- sudo apt-get install -qq python-numpy python-scipy python3-numpy python3-scipy
-install: pip install -r requirements.txt
+ sudo apt-get install -qq python-numpy python-scipy
+#install: pip install -r requirements.txt
 
 script:  
  python maxent.py
