--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ python:
 #  - "3.4"
   - "2.7"
 before_install: 
- sudo apt-get install -qq python-numpy python-scipy libblas-dev liblapack-dev
+ sudo apt-get install -qq python-numpy python-scipy
 
 
 script:  
