--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,16 @@
 language: python
 python:
-#  - "3.4"
+  - "3.4"
   - "2.7"
 before_install: 
- sudo apt-get install -qq python-numpy python-scipy
+ - wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh
+ - chmod +x miniconda.sh
+ - ./miniconda.sh -b
+ - export PATH=/home/travis/miniconda/bin:$PATH
+ - conda update --yes conda
 
+install:
+ - conda install --yes python=$TRAVIS_PYTHON_VERSION numpy scipy
 
 script:  
  python maxent.py
