--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,8 @@ before_install:
  - conda update --yes conda
 
 install:
- - conda install --yes python=$TRAVIS_PYTHON_VERSION numpy scipy
+ - conda install --yes python=$TRAVIS_PYTHON_VERSION --file requirements.txt
 
 script:  
- python maxent.py
- python kaczmarz.py
+ - python maxent.py
+ - python kaczmarz.py
