--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,11 @@ language: python
 python:
   - "3.4"
   - "2.7"
-before_install: 
+
+before_install:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+
   - if [[ $(python --version 2>&1) == "Python 3."* ]]; then
      pyv=3;
     fi
