--- a/.travis.yml
+++ b/.travis.yml
@@ -1,42 +1,36 @@
-language: python
-
-python:
-    - 2.7
-    - 3.5
-
-sudo: false
-
 notifications:
   email: false
 
 git:
-  depth: 1
+  depth: 3
   
-before_install:
-    - wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh
-    - chmod +x miniconda.sh
-    - bash miniconda.sh -b -p $HOME/miniconda
-    - export PATH=$HOME/miniconda/bin:$PATH
-    - hash -r
-    - conda update --quiet --yes conda
+env: 
+  global:
+    - pyv=3.5
+
+matrix:
+  include:
+    - os: osx
+      env: 
+        - osv=MacOSX
+
+    - os: linux
+      env: 
+        - osv=Linux
+
 
 install:
-    - conda create --yes -n test python=$TRAVIS_PYTHON_VERSION
+    - wget http://repo.continuum.io/miniconda/Miniconda-latest-$osv-x86_64.sh -O miniconda.sh
+    - bash miniconda.sh -b -p $HOME/miniconda
+    - export PATH=$HOME/miniconda/bin:$PATH
+    - conda update --yes --quiet conda
+    - conda create --yes --quiet -n test python=$pyv
     - source activate test
-    - if [[ ${TRAVIS_PYTHON_VERSION::1} -eq 2 ]]; then
-         pip -q install coveralls;
-      fi
-    - conda install --quiet --yes --file requirements.txt
+    - pip -q install coveralls
     - python setup.py develop
 
 script:
-    - if [[ ${TRAVIS_PYTHON_VERSION::1} -eq 2 ]]; then
-        coverage run test/test.py;
-      else
-        nosetests -v test/test.py;
-      fi
+    - coverage run test/test.py
 
 after_success:
-    - if [[ ${TRAVIS_PYTHON_VERSION::1} -eq 2 ]]; then
-        coveralls;
-      fi
+    - coveralls
