--- a/.travis.yml
+++ b/.travis.yml
@@ -4,19 +4,25 @@ notifications:
 git:
   depth: 3
   
-env: 
-  global:
-    - pyv=3.5
-
 matrix:
   include:
     - os: osx
       env: 
         - osv=MacOSX
+        - pyv=3.5
+    - os: osx
+      env: 
+        - osv=MacOSX
+        - pyv=2.7
 
     - os: linux
       env: 
         - osv=Linux
+        - pyv=3.5
+    - os: linux
+      env: 
+        - osv=Linux
+        - pyv=2.7
 
 
 install:
@@ -30,7 +36,7 @@ install:
     - python setup.py develop
 
 script:
-    - coverage run test/test.py
+    - coverage run tests/test.py
 
 after_success:
     - coveralls
